# viper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.codespaces.yml  docker-compose.yml  pyproject.toml  requirements.txt  sonar-fixes.md  test_genai_env.py  test_litellm.py  test_litellm_auth.py  test_litellm_env.py  test_litellm_raw.py  test_llm_init.py  test_llm_request.py
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  code-review.yml  publish-agent-image.yml
docker/: Dockerfile.agent
docker/jenkins/: Dockerfile  Jenkinsfile  Jenkinsfile.multi-scm-wrapper  casc.yaml  entrypoint.sh  mainPipeline.groovy  plugins.txt  run-standalone-host-network.sh
docs/: ADK_REVIEW.md  ARCHITECTURAL-REFACTOR-CHECKLIST.md  ARCHITECTURAL-REFACTOR-PLAN.md  BATCH-REVIEW-EXECUTION-REFACTOR.md  BITBUCKET-DATACENTER.md  CONFIGURATION-REFERENCE.md  CONTEXT-AWARE-DEVELOPER-GUIDE.md  CONTEXT-AWARE-IMPROVEMENTS.md  CONTEXT-AWARE-REVIEW.md  CONTEXT-AWARE-USER-GUIDE.md  DEVELOPER_GUIDE.md  DEV_TESTING.md  E2E-UI-JENKINS.md  GITHUB-ACTIONS.md  GITHUB-CODESPACES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_TASKS.md  IMPROVEMENT_PLAN.md  JENKINS-EXISTING.md  JENKINS-MULTIPLE-SCMS.md  JENKINS-NO-DOCKER.md  JENKINS-REVIEW-DECISION-ONLY.md  ORCHESTRATION_PLAN_AGENT.md  ORCHESTRATION_PLAN_SERVICE.md  PHASE1_REMAINING_ANALYSIS.md  QUICKSTART-podman.md  QUICKSTART.md  RUN_REVIEW_REFACTOR_PLAN.md  SCM-REVIEW-DECISIONS-AND-MERGE-BLOCKING.md  SCM-REVIEW-DECISIONS-IMPLEMENTATION-PLAN.md  SECONDARY-LLM-MODELS-PLAN.md  SESSIONS-ARTIFACTS-MEMORY.md  ai_code_review_agent_280caf7c.plan.md
e2e_ui/: run_multi_scm.py  run_single_scm.py
e2e_ui/core/: __init__.py  env_loader.py  jenkins.py  runner.py
requirements/: runtime.txt
scripts/: bitbucket_pull_request_api.py  bitbucket_pull_request_comments.py  bitbucket_pull_request_quality_gate.py  create_bitbucket_pull_request.py  delete_bitbucket_pull_request.py  jenkins_sync_inline_pipeline.py  run-standalone-host-network.sh  simulate_github_webhook.py
src/code_review/: __init__.py  __main__.py  adk_runner.py  batching.py  config.py  github_client.py  llm_telemetry.py  logging_config.py  model_metadata.json  models.py  observability.py  orchestration_deps.py  reply_dismissal_state.py  review_execution.py  review_orchestrator.py  runner.py  service_models.py  service_runtime.py
tests/: conftest.py  test_adk_runner.py  test_cli_eval.py  test_diff_parser.py  test_diff_position.py  test_github_client.py  test_json_utils.py  test_llm_telemetry.py  test_logging_config.py  test_observability_export.py  test_providers_gitea.py  test_review_helpers.py  test_runner.py  test_runner_findings.py  test_service_runtime.py
tests/agent/: __init__.py  test_agent_debug_mode.py  test_ignore_list_integration.py  test_reply_dismissal_agent.py  test_summary_agent.py  test_verification_agent.py  test_workflows.py
tests/cli/: test_main.py
tests/config/: test_config.py
tests/context/: test_context_extract_and_validation.py  test_distiller.py  test_fetchers.py  test_pipeline.py  test_rag.py  test_validation.py
tests/diff/: test_fingerprint.py  test_format_adapters.py  test_golden_diff_position.py  test_utils.py
tests/docker/: __init__.py  test_dockerfile.py
tests/e2e/: __init__.py  docker-compose.e2e.yml  test_docker_gitea_e2e.py
tests/evals/: test_eval_corpus.py  test_local_runner.py
tests/formatters/: __init__.py  test_comment_format.py
tests/integration/: test_gitea_agent_integration.py
tests/models/: test_model_factory.py
tests/providers/: test_bitbucket.py  test_bitbucket_server.py  test_gitea.py  test_github.py  test_gitlab.py  test_head_sha_from_pr_dict.py  test_ignore_fingerprint.py  test_rate_limit_retry.py  test_resolved_tracking.py  test_review_decision_common.py  test_safety.py
tests/runner/: __init__.py  test_diff_line_guardrail.py  test_error_paths.py  test_false_positive_filters.py  test_idempotency.py  test_large_pr_chunking.py  test_line_relocation.py  (+6 more)
(+101 files in other folders)
