[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-agent"
version = "1.1.2"
description = "AI-driven code review agent for CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["code-review", "ai", "ci-cd", "adk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-adk>=1.25.0",
    "httpx>=0.28.0",
    "PyGithub>=2.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "litellm>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "respx>=0.21",
]
observability = [
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
context = [
    "psycopg[binary]>=3.2",
]
e2e-ui = [
    "playwright>=1.49",
    "python-dotenv>=1.0",
]

[project.scripts]
code-review = "code_review.__main__:app"
code-review-eval = "code_review.evals.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_review = ["standards/prompts/*.md", "model_metadata.json", "evals/fixtures/*.json", "evals/fixtures/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: E2E tests (require Docker + Gitea, run with RUN_E2E=1)",
    "respx: HTTP mocking with respx",
]
filterwarnings = [
    # Known third-party deprecations / noisy warnings; safe to ignore for now.
    "ignore:.*PytestUnknownMarkWarning:pytest.PytestUnknownMarkWarning",
    "ignore:Inheritance class AiohttpClientSession from ClientSession is discouraged:DeprecationWarning:google.genai._api_client",
    "ignore:.*PytestUnhandledThreadExceptionWarning:pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["src/code_review"]
omit = ["*/tests/*", "*/e2e/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]

# LLM instruction strings are intentionally long single lines.
[tool.ruff.lint.per-file-ignores]
"src/code_review/agent/agent.py" = ["E501"]
